Fix <a> text break only in .post-content

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ h3 {
   color: var(--secondary);
 }
 
-a {
+.post-content a {
   word-break: break-all;
 }
 
